web_app: place canvas on top image for easier colorization

--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -93,7 +93,7 @@
                         <div class="row text-center">
                             <div class="text-center uploadedImg">
                                 <img id="img-upload" class="img-upload" height="256px" width="256px">
-                                <canvas id="canvas" height="256px" width="256px"></canvas>
+                                <canvas id="canvas" class="canvas" height="256px" width="256px"></canvas>
                                  <label for="color">Select color:</label>
                                  <input type="color" id="color" name="color" value="#ff0000">
                             </div>
